Layout: Remove about-section from settings and add menu-link to Github

--- a/app/src/main/res/menu/menu_global.xml
+++ b/app/src/main/res/menu/menu_global.xml
@@ -20,6 +20,10 @@
     >
 
     <item
+        android:id="@+id/menu_github"
+        android:title="Github"/>
+
+    <item
         android:id="@+id/menu_exit"
         android:title="Exit"/>
 
