Values: Move hardcoded strings to resources

--- a/app/src/main/res/layout/frame_captcha.xml
+++ b/app/src/main/res/layout/frame_captcha.xml
@@ -27,6 +27,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:adjustViewBounds="false"
-        android:contentDescription="Captcha"/>
+        android:contentDescription="@string/main_imageview_description"/>
 
 </LinearLayout>
