--- a/app/src/main/res/layout-sw600dp/fragment_solver.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_solver.xml
@@ -19,7 +19,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="7dp">
+              android:padding="7dp"
+              android:baselineAligned="false">
 
     <include
         android:id="@+id/includeCaptcha"
