--- a/app/src/main/res/layout/frame_solver.xml
+++ b/app/src/main/res/layout/frame_solver.xml
@@ -17,6 +17,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -36,7 +37,8 @@
 
         <TableRow
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            tools:ignore="UselessParent">
 
             <Button
                 android:id="@+id/buttonPull"
