--- a/app/src/main/res/layout/frame_captcha.xml
+++ b/app/src/main/res/layout/frame_captcha.xml
@@ -24,7 +24,7 @@
     <ImageView
             android:id="@+id/imageViewCaptcha"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:adjustViewBounds="false"
             android:contentDescription="@string/main_imageview_description"
